# rust-gradle-plugin

./: .editorconfig  .gitignore  README.md  build.gradle.kts  settings.gradle.kts
example/: build.gradle.kts
example/src/main/kotlin/dev/rushii/libhello/: LibHello.kt
example/src/main/rust/src/: lib.rs
examples/android-app/: build.gradle.kts
examples/android-app/src/main/: AndroidManifest.xml
examples/android-app/src/main/rust/: Cargo.toml
examples/android-app/src/main/rust/src/: lib.rs
examples/android-library/: build.gradle.kts  consumer-rules.pro
examples/desktop-app/: build.gradle.kts
examples/desktop-app/src/main/rust/: Cargo.toml
examples/desktop-app/src/main/rust/src/: lib.rs
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
plugin/: build.gradle.kts  plugin.properties  settings.gradle.kts
plugin/src/main/kotlin/dev/rushii/rgp/: AndroidDeclaration.kt  AndroidUtils.kt  CargoBuildTask.kt  CargoProjectDeclaration.kt  GenerateAndroidLinkerWrapperTask.kt  GenerateAndroidToolchainsTask.kt  RustConfigExtension.kt  RustPlugin.kt
plugin/src/main/kotlin/dev/rushii/rust_gradle_plugin/: CargoBuildTask.kt  CargoProjectDeclaration.kt  RustConfigExtension.kt  RustPlugin.kt  TemplateExampleTask.kt  TemplateExtension.kt  TemplatePlugin.kt
plugin/src/main/resources/: android-linker-wrapper.bat  android-linker-wrapper.py  android-linker-wrapper.sh
plugin/src/test/kotlin/dev/rushii/rgp/: RustPluginTest.kt  TestUtils.kt
plugin/src/test/kotlin/dev/rushii/rust_gradle_plugin/: RustPluginTest.kt  TemplatePluginTest.kt
(+20 files in other folders)
